@@ -1,7 +1,17 @@
+tests = fenscan
 SUBDIRS = src fenscan
 
 data::
-	(cd fenscan && $(MAKE) $@)
+		list='$(tests)'; for dir in $$list; do \
+		(cd $$dir && $(MAKE) $@); \
+		done
+
+check-data::
+		list='$(tests)'; for dir in $$list; do \
+		  (cd $$dir && $(MAKE) $@); \
+		done
 
 dist-gold-standard::
-	(cd fenscan && $(MAKE) $@)	
+		list='$(tests)'; for dir in $$list; do \
+		  (cd $$dir && $(MAKE) $@); \
+		done
